Project2/Code/parser.output
Grammar

    0 $accept: function $end

    1 function: function_header optional_variable body

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS type ';'
    3                | FUNCTION error ';'

    4 parameters: parameter_list
    5           | ε

    6 parameter_list: parameter
    7               | parameter ',' parameter_list

    8 parameter: IDENTIFIER ':' type

    9 type: INTEGER
   10     | CHARACTER
   11     | REAL

   12 optional_variable: variable optional_variable
   13                  | ε

   14 variable: IDENTIFIER ':' type IS statement ';'
   15         | IDENTIFIER ':' LIST OF type IS list ';'
   16         | error ';'

   17 list: '(' expressions ')'

   18 expressions: expressions ',' expression
   19            | expression

   20 body: BEGIN_ statement_ END ';'

   21 statement_: statement ';'
   22           | FOLD direction operator list_choice ENDFOLD ';'
   23           | error ';'

   24 statement: expression
   25          | WHEN condition ',' expression ':' expression
   26          | SWITCH expression IS cases OTHERS ARROW statement ';' ENDSWITCH
   27          | IF condition THEN statement_ elsif_statements else_statement ENDIF

   28 direction: LEFT
   29          | RIGHT

   30 operator: ADDOP
   31         | MULOP
   32         | REMOP

   33 list_choice: list
   34            | IDENTIFIER

   35 elsif_statements: elsif_statement elsif_statements
   36                 | ε

   37 elsif_statement: ELSIF condition THEN statement_

   38 else_statement: ELSE statement_
   39               | ε

   40 cases: cases case
   41      | ε

   42 case: CASE INT_LITERAL ARROW statement ';'
   43     | error ';'

   44 condition: condition OROP logical_and
   45          | logical_and

   46 logical_and: logical_and ANDOP relation
   47            | relation

   48 relation: '(' condition ')'
   49         | expression RELOP expression
   50         | NOTOP relation

   51 expression: expression ADDOP term
   52           | term

   53 term: term MULOP factor
   54     | term REMOP factor
   55     | factor

   56 factor: primary
   57       | primary EXPOP factor

   58 primary: '(' expression ')'
   59        | INT_LITERAL
   60        | CHAR_LITERAL
   61        | IDENTIFIER '(' expression ')'
   62        | IDENTIFIER
   63        | REAL_LITERAL
   64        | NEGOP primary


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 17 48 58 61
    ')' (41) 17 48 58 61
    ',' (44) 7 18 25
    ':' (58) 8 14 15 25
    ';' (59) 2 3 14 15 16 20 21 22 23 26 42 43
    error (256) 3 16 23 43
    IDENTIFIER (258) 2 8 14 15 34 61 62
    INT_LITERAL (259) 42 59
    CHAR_LITERAL (260) 60
    ADDOP (261) 30 51
    MULOP (262) 31 53
    ANDOP (263) 46
    RELOP (264) 49
    ARROW (265) 26 42
    BEGIN_ (266) 20
    CASE (267) 42
    CHARACTER (268) 10
    ELSE (269) 38
    END (270) 20
    ENDSWITCH (271) 26
    FUNCTION (272) 2 3
    INTEGER (273) 9
    IS (274) 14 15 26
    LIST (275) 15
    OF (276) 15
    OTHERS (277) 26
    RETURNS (278) 2
    SWITCH (279) 26
    WHEN (280) 25
    ELSIF (281) 37
    ENDFOLD (282) 22
    ENDIF (283) 27
    FOLD (284) 22
    IF (285) 27
    LEFT (286) 28
    REAL (287) 11
    RIGHT (288) 29
    THEN (289) 27 37
    REAL_LITERAL (290) 63
    OROP (291) 44
    NOTOP (292) 50
    REMOP (293) 32 54
    EXPOP (294) 57
    NEGOP (295) 64


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    function (47)
        on left: 1
        on right: 0
    function_header (48)
        on left: 2 3
        on right: 1
    parameters (49)
        on left: 4 5
        on right: 2
    parameter_list (50)
        on left: 6 7
        on right: 4 7
    parameter (51)
        on left: 8
        on right: 6 7
    type (52)
        on left: 9 10 11
        on right: 2 8 14 15
    optional_variable (53)
        on left: 12 13
        on right: 1 12
    variable (54)
        on left: 14 15 16
        on right: 12
    list (55)
        on left: 17
        on right: 15 33
    expressions (56)
        on left: 18 19
        on right: 17 18
    body (57)
        on left: 20
        on right: 1
    statement_ (58)
        on left: 21 22 23
        on right: 20 27 37 38
    statement (59)
        on left: 24 25 26 27
        on right: 14 21 26 42
    direction (60)
        on left: 28 29
        on right: 22
    operator (61)
        on left: 30 31 32
        on right: 22
    list_choice (62)
        on left: 33 34
        on right: 22
    elsif_statements (63)
        on left: 35 36
        on right: 27 35
    elsif_statement (64)
        on left: 37
        on right: 35
    else_statement (65)
        on left: 38 39
        on right: 27
    cases (66)
        on left: 40 41
        on right: 26 40
    case (67)
        on left: 42 43
        on right: 40
    condition (68)
        on left: 44 45
        on right: 25 27 37 44 48
    logical_and (69)
        on left: 46 47
        on right: 44 45 46
    relation (70)
        on left: 48 49 50
        on right: 46 47 50
    expression (71)
        on left: 51 52
        on right: 18 19 24 25 26 49 51 58 61
    term (72)
        on left: 53 54 55
        on right: 51 52 53 54
    factor (73)
        on left: 56 57
        on right: 53 54 55 57
    primary (74)
        on left: 58 59 60 61 62 63 64
        on right: 56 57 64


State 0

    0 $accept: • function $end

    FUNCTION  shift, and go to state 1

    function         go to state 2
    function_header  go to state 3


State 1

    2 function_header: FUNCTION • IDENTIFIER parameters RETURNS type ';'
    3                | FUNCTION • error ';'

    error       shift, and go to state 4
    IDENTIFIER  shift, and go to state 5


State 2

    0 $accept: function • $end

    $end  shift, and go to state 6


State 3

    1 function: function_header • optional_variable body

    error       shift, and go to state 7
    IDENTIFIER  shift, and go to state 8

    BEGIN_  reduce using rule 13 (optional_variable)

    optional_variable  go to state 9
    variable           go to state 10


State 4

    3 function_header: FUNCTION error • ';'

    ';'  shift, and go to state 11


State 5

    2 function_header: FUNCTION IDENTIFIER • parameters RETURNS type ';'

    IDENTIFIER  shift, and go to state 12

    $default  reduce using rule 5 (parameters)

    parameters      go to state 13
    parameter_list  go to state 14
    parameter       go to state 15


State 6

    0 $accept: function $end •

    $default  accept


State 7

   16 variable: error • ';'

    ';'  shift, and go to state 16


State 8

   14 variable: IDENTIFIER • ':' type IS statement ';'
   15         | IDENTIFIER • ':' LIST OF type IS list ';'

    ':'  shift, and go to state 17


State 9

    1 function: function_header optional_variable • body

    BEGIN_  shift, and go to state 18

    body  go to state 19


State 10

   12 optional_variable: variable • optional_variable

    error       shift, and go to state 7
    IDENTIFIER  shift, and go to state 8

    BEGIN_  reduce using rule 13 (optional_variable)

    optional_variable  go to state 20
    variable           go to state 10


State 11

    3 function_header: FUNCTION error ';' •

    $default  reduce using rule 3 (function_header)


State 12

    8 parameter: IDENTIFIER • ':' type

    ':'  shift, and go to state 21


State 13

    2 function_header: FUNCTION IDENTIFIER parameters • RETURNS type ';'

    RETURNS  shift, and go to state 22


State 14

    4 parameters: parameter_list •

    $default  reduce using rule 4 (parameters)


State 15

    6 parameter_list: parameter •
    7               | parameter • ',' parameter_list

    ','  shift, and go to state 23

    $default  reduce using rule 6 (parameter_list)


State 16

   16 variable: error ';' •

    $default  reduce using rule 16 (variable)


State 17

   14 variable: IDENTIFIER ':' • type IS statement ';'
   15         | IDENTIFIER ':' • LIST OF type IS list ';'

    CHARACTER  shift, and go to state 24
    INTEGER    shift, and go to state 25
    LIST       shift, and go to state 26
    REAL       shift, and go to state 27

    type  go to state 28


State 18

   20 body: BEGIN_ • statement_ END ';'

    error         shift, and go to state 29
    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    SWITCH        shift, and go to state 33
    WHEN          shift, and go to state 34
    FOLD          shift, and go to state 35
    IF            shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 39

    statement_  go to state 40
    statement   go to state 41
    expression  go to state 42
    term        go to state 43
    factor      go to state 44
    primary     go to state 45


State 19

    1 function: function_header optional_variable body •

    $default  reduce using rule 1 (function)


State 20

   12 optional_variable: variable optional_variable •

    $default  reduce using rule 12 (optional_variable)


State 21

    8 parameter: IDENTIFIER ':' • type

    CHARACTER  shift, and go to state 24
    INTEGER    shift, and go to state 25
    REAL       shift, and go to state 27

    type  go to state 46


State 22

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS • type ';'

    CHARACTER  shift, and go to state 24
    INTEGER    shift, and go to state 25
    REAL       shift, and go to state 27

    type  go to state 47


State 23

    7 parameter_list: parameter ',' • parameter_list

    IDENTIFIER  shift, and go to state 12

    parameter_list  go to state 48
    parameter       go to state 15


State 24

   10 type: CHARACTER •

    $default  reduce using rule 10 (type)


State 25

    9 type: INTEGER •

    $default  reduce using rule 9 (type)


State 26

   15 variable: IDENTIFIER ':' LIST • OF type IS list ';'

    OF  shift, and go to state 49


State 27

   11 type: REAL •

    $default  reduce using rule 11 (type)


State 28

   14 variable: IDENTIFIER ':' type • IS statement ';'

    IS  shift, and go to state 50


State 29

   23 statement_: error • ';'

    ';'  shift, and go to state 51


State 30

   61 primary: IDENTIFIER • '(' expression ')'
   62        | IDENTIFIER •

    '('  shift, and go to state 52

    $default  reduce using rule 62 (primary)


State 31

   59 primary: INT_LITERAL •

    $default  reduce using rule 59 (primary)


State 32

   60 primary: CHAR_LITERAL •

    $default  reduce using rule 60 (primary)


State 33

   26 statement: SWITCH • expression IS cases OTHERS ARROW statement ';' ENDSWITCH

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 39

    expression  go to state 53
    term        go to state 43
    factor      go to state 44
    primary     go to state 45


State 34

   25 statement: WHEN • condition ',' expression ':' expression

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 37
    NOTOP         shift, and go to state 54
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 55

    condition    go to state 56
    logical_and  go to state 57
    relation     go to state 58
    expression   go to state 59
    term         go to state 43
    factor       go to state 44
    primary      go to state 45


State 35

   22 statement_: FOLD • direction operator list_choice ENDFOLD ';'

    LEFT   shift, and go to state 60
    RIGHT  shift, and go to state 61

    direction  go to state 62


State 36

   27 statement: IF • condition THEN statement_ elsif_statements else_statement ENDIF

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 37
    NOTOP         shift, and go to state 54
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 55

    condition    go to state 63
    logical_and  go to state 57
    relation     go to state 58
    expression   go to state 59
    term         go to state 43
    factor       go to state 44
    primary      go to state 45


State 37

   63 primary: REAL_LITERAL •

    $default  reduce using rule 63 (primary)


State 38

   64 primary: NEGOP • primary

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 39

    primary  go to state 64


State 39

   58 primary: '(' • expression ')'

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 39

    expression  go to state 65
    term        go to state 43
    factor      go to state 44
    primary     go to state 45


State 40

   20 body: BEGIN_ statement_ • END ';'

    END  shift, and go to state 66


State 41

   21 statement_: statement • ';'

    ';'  shift, and go to state 67


State 42

   24 statement: expression •
   51 expression: expression • ADDOP term

    ADDOP  shift, and go to state 68

    $default  reduce using rule 24 (statement)


State 43

   52 expression: term •
   53 term: term • MULOP factor
   54     | term • REMOP factor

    MULOP  shift, and go to state 69
    REMOP  shift, and go to state 70

    $default  reduce using rule 52 (expression)


State 44

   55 term: factor •

    $default  reduce using rule 55 (term)


State 45

   56 factor: primary •
   57       | primary • EXPOP factor

    EXPOP  shift, and go to state 71

    $default  reduce using rule 56 (factor)


State 46

    8 parameter: IDENTIFIER ':' type •

    $default  reduce using rule 8 (parameter)


State 47

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS type • ';'

    ';'  shift, and go to state 72


State 48

    7 parameter_list: parameter ',' parameter_list •

    $default  reduce using rule 7 (parameter_list)


State 49

   15 variable: IDENTIFIER ':' LIST OF • type IS list ';'

    CHARACTER  shift, and go to state 24
    INTEGER    shift, and go to state 25
    REAL       shift, and go to state 27

    type  go to state 73


State 50

   14 variable: IDENTIFIER ':' type IS • statement ';'

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    SWITCH        shift, and go to state 33
    WHEN          shift, and go to state 34
    IF            shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 39

    statement   go to state 74
    expression  go to state 42
    term        go to state 43
    factor      go to state 44
    primary     go to state 45


State 51

   23 statement_: error ';' •

    $default  reduce using rule 23 (statement_)


State 52

   61 primary: IDENTIFIER '(' • expression ')'

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 39

    expression  go to state 75
    term        go to state 43
    factor      go to state 44
    primary     go to state 45


State 53

   26 statement: SWITCH expression • IS cases OTHERS ARROW statement ';' ENDSWITCH
   51 expression: expression • ADDOP term

    ADDOP  shift, and go to state 68
    IS     shift, and go to state 76


State 54

   50 relation: NOTOP • relation

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 37
    NOTOP         shift, and go to state 54
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 55

    relation    go to state 77
    expression  go to state 59
    term        go to state 43
    factor      go to state 44
    primary     go to state 45


State 55

   48 relation: '(' • condition ')'
   58 primary: '(' • expression ')'

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 37
    NOTOP         shift, and go to state 54
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 55

    condition    go to state 78
    logical_and  go to state 57
    relation     go to state 58
    expression   go to state 79
    term         go to state 43
    factor       go to state 44
    primary      go to state 45


State 56

   25 statement: WHEN condition • ',' expression ':' expression
   44 condition: condition • OROP logical_and

    OROP  shift, and go to state 80
    ','   shift, and go to state 81


State 57

   45 condition: logical_and •
   46 logical_and: logical_and • ANDOP relation

    ANDOP  shift, and go to state 82

    $default  reduce using rule 45 (condition)


State 58

   47 logical_and: relation •

    $default  reduce using rule 47 (logical_and)


State 59

   49 relation: expression • RELOP expression
   51 expression: expression • ADDOP term

    ADDOP  shift, and go to state 68
    RELOP  shift, and go to state 83


State 60

   28 direction: LEFT •

    $default  reduce using rule 28 (direction)


State 61

   29 direction: RIGHT •

    $default  reduce using rule 29 (direction)


State 62

   22 statement_: FOLD direction • operator list_choice ENDFOLD ';'

    ADDOP  shift, and go to state 84
    MULOP  shift, and go to state 85
    REMOP  shift, and go to state 86

    operator  go to state 87


State 63

   27 statement: IF condition • THEN statement_ elsif_statements else_statement ENDIF
   44 condition: condition • OROP logical_and

    THEN  shift, and go to state 88
    OROP  shift, and go to state 80


State 64

   64 primary: NEGOP primary •

    $default  reduce using rule 64 (primary)


State 65

   51 expression: expression • ADDOP term
   58 primary: '(' expression • ')'

    ADDOP  shift, and go to state 68
    ')'    shift, and go to state 89


State 66

   20 body: BEGIN_ statement_ END • ';'

    ';'  shift, and go to state 90


State 67

   21 statement_: statement ';' •

    $default  reduce using rule 21 (statement_)


State 68

   51 expression: expression ADDOP • term

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 39

    term     go to state 91
    factor   go to state 44
    primary  go to state 45


State 69

   53 term: term MULOP • factor

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 39

    factor   go to state 92
    primary  go to state 45


State 70

   54 term: term REMOP • factor

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 39

    factor   go to state 93
    primary  go to state 45


State 71

   57 factor: primary EXPOP • factor

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 39

    factor   go to state 94
    primary  go to state 45


State 72

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS type ';' •

    $default  reduce using rule 2 (function_header)


State 73

   15 variable: IDENTIFIER ':' LIST OF type • IS list ';'

    IS  shift, and go to state 95


State 74

   14 variable: IDENTIFIER ':' type IS statement • ';'

    ';'  shift, and go to state 96


State 75

   51 expression: expression • ADDOP term
   61 primary: IDENTIFIER '(' expression • ')'

    ADDOP  shift, and go to state 68
    ')'    shift, and go to state 97


State 76

   26 statement: SWITCH expression IS • cases OTHERS ARROW statement ';' ENDSWITCH

    $default  reduce using rule 41 (cases)

    cases  go to state 98


State 77

   50 relation: NOTOP relation •

    $default  reduce using rule 50 (relation)


State 78

   44 condition: condition • OROP logical_and
   48 relation: '(' condition • ')'

    OROP  shift, and go to state 80
    ')'   shift, and go to state 99


State 79

   49 relation: expression • RELOP expression
   51 expression: expression • ADDOP term
   58 primary: '(' expression • ')'

    ADDOP  shift, and go to state 68
    RELOP  shift, and go to state 83
    ')'    shift, and go to state 89


State 80

   44 condition: condition OROP • logical_and

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 37
    NOTOP         shift, and go to state 54
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 55

    logical_and  go to state 100
    relation     go to state 58
    expression   go to state 59
    term         go to state 43
    factor       go to state 44
    primary      go to state 45


State 81

   25 statement: WHEN condition ',' • expression ':' expression

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 39

    expression  go to state 101
    term        go to state 43
    factor      go to state 44
    primary     go to state 45


State 82

   46 logical_and: logical_and ANDOP • relation

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 37
    NOTOP         shift, and go to state 54
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 55

    relation    go to state 102
    expression  go to state 59
    term        go to state 43
    factor      go to state 44
    primary     go to state 45


State 83

   49 relation: expression RELOP • expression

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 39

    expression  go to state 103
    term        go to state 43
    factor      go to state 44
    primary     go to state 45


State 84

   30 operator: ADDOP •

    $default  reduce using rule 30 (operator)


State 85

   31 operator: MULOP •

    $default  reduce using rule 31 (operator)


State 86

   32 operator: REMOP •

    $default  reduce using rule 32 (operator)


State 87

   22 statement_: FOLD direction operator • list_choice ENDFOLD ';'

    IDENTIFIER  shift, and go to state 104
    '('         shift, and go to state 105

    list         go to state 106
    list_choice  go to state 107


State 88

   27 statement: IF condition THEN • statement_ elsif_statements else_statement ENDIF

    error         shift, and go to state 29
    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    SWITCH        shift, and go to state 33
    WHEN          shift, and go to state 34
    FOLD          shift, and go to state 35
    IF            shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 39

    statement_  go to state 108
    statement   go to state 41
    expression  go to state 42
    term        go to state 43
    factor      go to state 44
    primary     go to state 45


State 89

   58 primary: '(' expression ')' •

    $default  reduce using rule 58 (primary)


State 90

   20 body: BEGIN_ statement_ END ';' •

    $default  reduce using rule 20 (body)


State 91

   51 expression: expression ADDOP term •
   53 term: term • MULOP factor
   54     | term • REMOP factor

    MULOP  shift, and go to state 69
    REMOP  shift, and go to state 70

    $default  reduce using rule 51 (expression)


State 92

   53 term: term MULOP factor •

    $default  reduce using rule 53 (term)


State 93

   54 term: term REMOP factor •

    $default  reduce using rule 54 (term)


State 94

   57 factor: primary EXPOP factor •

    $default  reduce using rule 57 (factor)


State 95

   15 variable: IDENTIFIER ':' LIST OF type IS • list ';'

    '('  shift, and go to state 105

    list  go to state 109


State 96

   14 variable: IDENTIFIER ':' type IS statement ';' •

    $default  reduce using rule 14 (variable)


State 97

   61 primary: IDENTIFIER '(' expression ')' •

    $default  reduce using rule 61 (primary)


State 98

   26 statement: SWITCH expression IS cases • OTHERS ARROW statement ';' ENDSWITCH
   40 cases: cases • case

    error   shift, and go to state 110
    CASE    shift, and go to state 111
    OTHERS  shift, and go to state 112

    case  go to state 113


State 99

   48 relation: '(' condition ')' •

    $default  reduce using rule 48 (relation)


State 100

   44 condition: condition OROP logical_and •
   46 logical_and: logical_and • ANDOP relation

    ANDOP  shift, and go to state 82

    $default  reduce using rule 44 (condition)


State 101

   25 statement: WHEN condition ',' expression • ':' expression
   51 expression: expression • ADDOP term

    ADDOP  shift, and go to state 68
    ':'    shift, and go to state 114


State 102

   46 logical_and: logical_and ANDOP relation •

    $default  reduce using rule 46 (logical_and)


State 103

   49 relation: expression RELOP expression •
   51 expression: expression • ADDOP term

    ADDOP  shift, and go to state 68

    $default  reduce using rule 49 (relation)


State 104

   34 list_choice: IDENTIFIER •

    $default  reduce using rule 34 (list_choice)


State 105

   17 list: '(' • expressions ')'

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 39

    expressions  go to state 115
    expression   go to state 116
    term         go to state 43
    factor       go to state 44
    primary      go to state 45


State 106

   33 list_choice: list •

    $default  reduce using rule 33 (list_choice)


State 107

   22 statement_: FOLD direction operator list_choice • ENDFOLD ';'

    ENDFOLD  shift, and go to state 117


State 108

   27 statement: IF condition THEN statement_ • elsif_statements else_statement ENDIF

    ELSIF  shift, and go to state 118

    $default  reduce using rule 36 (elsif_statements)

    elsif_statements  go to state 119
    elsif_statement   go to state 120


State 109

   15 variable: IDENTIFIER ':' LIST OF type IS list • ';'

    ';'  shift, and go to state 121


State 110

   43 case: error • ';'

    ';'  shift, and go to state 122


State 111

   42 case: CASE • INT_LITERAL ARROW statement ';'

    INT_LITERAL  shift, and go to state 123


State 112

   26 statement: SWITCH expression IS cases OTHERS • ARROW statement ';' ENDSWITCH

    ARROW  shift, and go to state 124


State 113

   40 cases: cases case •

    $default  reduce using rule 40 (cases)


State 114

   25 statement: WHEN condition ',' expression ':' • expression

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 39

    expression  go to state 125
    term        go to state 43
    factor      go to state 44
    primary     go to state 45


State 115

   17 list: '(' expressions • ')'
   18 expressions: expressions • ',' expression

    ','  shift, and go to state 126
    ')'  shift, and go to state 127


State 116

   19 expressions: expression •
   51 expression: expression • ADDOP term

    ADDOP  shift, and go to state 68

    $default  reduce using rule 19 (expressions)


State 117

   22 statement_: FOLD direction operator list_choice ENDFOLD • ';'

    ';'  shift, and go to state 128


State 118

   37 elsif_statement: ELSIF • condition THEN statement_

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 37
    NOTOP         shift, and go to state 54
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 55

    condition    go to state 129
    logical_and  go to state 57
    relation     go to state 58
    expression   go to state 59
    term         go to state 43
    factor       go to state 44
    primary      go to state 45


State 119

   27 statement: IF condition THEN statement_ elsif_statements • else_statement ENDIF

    ELSE  shift, and go to state 130

    $default  reduce using rule 39 (else_statement)

    else_statement  go to state 131


State 120

   35 elsif_statements: elsif_statement • elsif_statements

    ELSIF  shift, and go to state 118

    $default  reduce using rule 36 (elsif_statements)

    elsif_statements  go to state 132
    elsif_statement   go to state 120


State 121

   15 variable: IDENTIFIER ':' LIST OF type IS list ';' •

    $default  reduce using rule 15 (variable)


State 122

   43 case: error ';' •

    $default  reduce using rule 43 (case)


State 123

   42 case: CASE INT_LITERAL • ARROW statement ';'

    ARROW  shift, and go to state 133


State 124

   26 statement: SWITCH expression IS cases OTHERS ARROW • statement ';' ENDSWITCH

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    SWITCH        shift, and go to state 33
    WHEN          shift, and go to state 34
    IF            shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 39

    statement   go to state 134
    expression  go to state 42
    term        go to state 43
    factor      go to state 44
    primary     go to state 45


State 125

   25 statement: WHEN condition ',' expression ':' expression •
   51 expression: expression • ADDOP term

    ADDOP  shift, and go to state 68

    $default  reduce using rule 25 (statement)


State 126

   18 expressions: expressions ',' • expression

    IDENTIFIER    shift, and go to state 30
    INT_LITERAL   shift, and go to state 31
    CHAR_LITERAL  shift, and go to state 32
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 39

    expression  go to state 135
    term        go to state 43
    factor      go to state 44
    primary     go to state 45


State 127

   17 list: '(' expressions ')' •

    $default  reduce using rule 17 (list)


State 128

   22 statement_: FOLD direction operator list_choice ENDFOLD ';' •

    $default  reduce using rule 22 (statement_)


State 129

   37 elsif_statement: ELSIF condition • THEN statement_
   44 condition: condition • OROP logical_and

    THEN  shift, and go to state 136
    OROP  shift, and go to state 80


State 130

   38 else_statement: ELSE • statement_
